# tnac

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
_cmake/: utils.cmake
docs/: CMakeLists.txt  README.md
docs/stuff/: grammar.md
extras/notepad_pp/: tnac.xml
tnac/: CMakeLists.txt  pch.h
tnac/data/: test.tnac
tnac/include/app/: driver.hpp  printer.hpp
tnac/src/: tnac.cpp
tnac/src/app/: driver.cpp
tnac_common/: pch.h
tnac_common/include/common/: common.hpp  diag.hpp  feedback.hpp
tnac_common/src/: diag.cpp  feedback.cpp
tnac_compiler/include/cfg/: builder.hpp  cfg.hpp  cfg_walker.hpp
tnac_compiler/include/compiler/: compiler.hpp
tnac_compiler/src/: compiler.cpp
tnac_compiler/src/cfg/: builder.cpp  cfg.cpp
tnac_compiler/src/detail/: compiler_stack.cpp  context.cpp  module_info.cpp  name_repo.cpp
tnac_eval/: evaluator.cpp  pch.h
tnac_eval/src/: evaluator.cpp  value.cpp  value_registry.cpp  value_visitor.cpp
tnac_front/: pch.h
tnac_lib/: CMakeLists.txt  pch.h  tnac_lib.natstepfilter  tnac_lib.natvis
tnac_lib/include/ast/: ast.hpp  ast_builder.hpp  ast_decls.hpp  ast_expr.hpp  ast_nodes.hpp  ast_util.hpp  ast_visitor.hpp
tnac_lib/include/cfg/: cfg.hpp  cfg_walker.hpp
tnac_lib/include/cfg/ir/: ir.hpp  ir_basic_block.hpp  ir_builder.hpp  ir_function.hpp  ir_instructions.hpp  ir_stored.hpp
tnac_lib/include/commands/: cmd_interpreter.hpp
tnac_lib/include/commands/cmd/: commands.hpp
tnac_lib/include/common/: common.hpp  diag.hpp  feedback.hpp
tnac_lib/include/compiler/: compiler.hpp
tnac_lib/include/compiler/cfg/: basic_block.hpp  cfg.hpp  cfg_builder.hpp  edge.hpp  environment.hpp  func.hpp
tnac_lib/include/compiler/detail/: compiler_stack.hpp  context.hpp  name_repo.hpp
tnac_lib/include/compiler/src_mgr/: source_file.hpp  source_location.hpp  source_manager.hpp
tnac_lib/include/core/: tnac.hpp
tnac_lib/include/eval/: call_stack.hpp  environment.hpp  ir_evaluator.hpp  traits.hpp  type_impl.hpp  types.hpp  value.hpp  value_store.hpp
tnac_lib/include/eval/stack/: call_stack.hpp  stack_frame.hpp
tnac_lib/include/eval/types/: traits.hpp
tnac_lib/include/eval/value/: traits.hpp  type_impl.hpp  types.hpp  value.hpp  value_store.hpp  value_visitor.hpp
tnac_lib/include/evaluator/: call_stack.hpp  evaluator.hpp  traits.hpp  types.hpp  value.hpp  value_registry.hpp  value_visitor.hpp
tnac_lib/include/evaluator/type_support/: traits.hpp  types.hpp
tnac_lib/include/evaluator/value/: value.hpp  value_registry.hpp  value_visitor.hpp
tnac_lib/include/exec/: call_stack.hpp
tnac_lib/include/exec/value/: value.hpp  value_registry.hpp  value_visitor.hpp
tnac_lib/include/general/: ast_kinds.inl  defs.hpp  op_codes.inl  token_kinds.inl
tnac_lib/include/ir/: bytecode.hpp  ir.hpp  ir_all.hpp  ir_simple.hpp
tnac_lib/include/parser/: lex.hpp  parser.hpp  sym_table.hpp  symbol.hpp  token.hpp
tnac_lib/include/parser/ast/: ast.hpp  ast_base.hpp  ast_builder.hpp  ast_decls.hpp  ast_expr.hpp  ast_root.hpp  ast_util.hpp  ast_visitor.hpp
tnac_lib/include/parser/commands/: cmd_interpreter.hpp
tnac_lib/include/parser/commands/cmd/: commands.hpp
tnac_lib/include/sema/: sema.hpp  sym_table.hpp  symbol.hpp
tnac_lib/include/sema/sym/: sym_base.hpp  sym_func.hpp  sym_scope.hpp  sym_table.hpp
tnac_lib/include/src_mgr/: source_file.hpp  source_location.hpp  source_manager.hpp
tnac_lib/include/tnac/: driver.hpp
tnac_lib/include/type_support/: types.hpp
tnac_lib/include/types/: traits.hpp  types.hpp
tnac_lib/src/: tnac.cpp  tnac_lib.cpp
tnac_lib/src/ast/: ast.cpp  ast_builder.cpp  ast_decls.cpp  ast_expr.cpp  ast_util.cpp
tnac_lib/src/cfg/: cfg.cpp
tnac_lib/src/cfg/ir/: ir_base.cpp  ir_basic_block.cpp  ir_builder.cpp  ir_function.cpp  ir_instructions.cpp
tnac_lib/src/commands/: cmd_interpreter.cpp
tnac_lib/src/common/: diag.cpp
tnac_lib/src/compiler/: compiler.cpp  compiler_stack.cpp  context.cpp  name_repo.cpp
tnac_lib/src/compiler/cfg/: basic_block.cpp  cfg.cpp  cfg_builder.cpp  edge.cpp  environment.cpp  func.cpp
tnac_lib/src/compiler/detail/: compiler_stack.cpp
tnac_lib/src/compiler/src_mgr/: source_file.cpp  source_location.cpp  source_manager.cpp
tnac_lib/src/core/: tnac.cpp
tnac_lib/src/eval/: call_stack.cpp  environment.cpp  ir_evaluator.cpp  traits.cpp  type_impl.cpp  types.cpp  value.cpp  value_store.cpp
tnac_lib/src/eval/stack/: call_stack.cpp  stack_frame.cpp
tnac_lib/src/eval/value/: traits.cpp  type_impl.cpp  types.cpp  value.cpp  value_store.cpp
tnac_lib/src/evaluator/: call_stack.cpp  evaluator.cpp  value.cpp  value_registry.cpp
tnac_lib/src/exec/: call_stack.cpp  value.cpp
tnac_lib/src/ir/: ir.cpp  ir_simple.cpp
tnac_lib/src/parser/: lex.cpp  parser.cpp  sym_table.cpp  symbol.cpp
tnac_lib/src/parser/ast/: ast.cpp  ast_base.cpp  ast_builder.cpp  ast_decls.cpp  ast_expr.cpp  ast_root.cpp  ast_util.cpp
tnac_lib/src/parser/commands/: cmd_interpreter.cpp
tnac_lib/src/sema/: sema.cpp  sym_table.cpp  symbol.cpp
tnac_lib/src/sema/sym/: sym_module.cpp  sym_scope.cpp  sym_table.cpp  sym_var.cpp
tnac_lib/src/src_mgr/: source_file.cpp  source_location.cpp  source_manager.cpp
tnac_lib/src/tnac/: driver.cpp
tnac_runtime/: pch.h
tnac_tests/: CMakeLists.txt  pch.h
tnac_tests/include/test_cases/: test_common.hpp
tnac_tests/src/: test_main.cpp
tnac_tests/src/evaluator/: evaluator.cpp
tnac_tests/src/test_cases/: test_arrays.cpp  test_eval.cpp  test_lex.cpp  test_parser.cpp  test_program.cpp  test_rc.cpp
tnac_tests/tests/: example0.tnac  example1.tnac  example2.tnac  example3.tnac  example4.tnac  example5.tnac  example_comments.tnac  example_fact.tnac  example_fib.tnac  example_ret.tnac
(+102 files in other folders)
